Tidy up recent projects list. Show hidden projects immediately after visible projects. Remove extra heading. Fix invalid div inside button. Scroll back to the top of the section when hiding projects. Animate opening the projects list.

--- a/css/home-page-for-user.styl
+++ b/css/home-page-for-user.styl
@@ -93,6 +93,16 @@ GRAY = #EFF2F5
     .details
       border-bottom-left-radius: 0.9em
       border-bottom-right-radius: 0.9em
+    
+    .project-card-list
+      overflow: hidden
+
+      &.closed
+        max-height: 0
+
+      &.open
+        max-height: 5000px
+        transition: max-height .5s ease-in
 
 .home-page-project-stats
   flex-grow: 1
